; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_acpitbl.c_acpitbl_build_xsdt.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_acpitbl.c_acpitbl_build_xsdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@acpitbl_build_xsdt.xsdt_tmpl = internal constant <{ [36 x i32], [32 x i32] }> <{ [36 x i32] [i32 88, i32 83, i32 68, i32 84, i32 68, i32 0, i32 0, i32 0, i32 1, i32 0, i32 66, i32 72, i32 89, i32 86, i32 69, i32 32, i32 66, i32 86, i32 88, i32 83, i32 68, i32 84, i32 32, i32 32, i32 1, i32 0, i32 0, i32 0, i32 73, i32 78, i32 84, i32 76, i32 40, i32 8, i32 20, i32 32], [32 x i32] zeroinitializer }>, align 16
@tb = common dso_local global i64 0, align 8
@XSDT_OFFSET = common dso_local global i64 0, align 8
@XHYVE_ACPI_BASE = common dso_local global i64 0, align 8
@MADT_OFFSET = common dso_local global i64 0, align 8
@FADT_OFFSET = common dso_local global i64 0, align 8
@HPET_OFFSET = common dso_local global i64 0, align 8
@MCFG_OFFSET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @acpitbl_build_xsdt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acpitbl_build_xsdt() #0 {
  %1 = alloca i8*, align 8
  %2 = load i64, i64* @tb, align 8
  %3 = load i64, i64* @XSDT_OFFSET, align 8
  %4 = add i64 %2, %3
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %1, align 8
  %6 = load i8*, i8** %1, align 8
  %7 = call i32 @memcpy(i8* %6, i32* getelementptr inbounds ([68 x i32], [68 x i32]* bitcast (<{ [36 x i32], [32 x i32] }>* @acpitbl_build_xsdt.xsdt_tmpl to [68 x i32]*), i64 0, i64 0), i32 68)
  %8 = load i8*, i8** %1, align 8
  %9 = load i64, i64* @XHYVE_ACPI_BASE, align 8
  %10 = load i64, i64* @MADT_OFFSET, align 8
  %11 = add nsw i64 %9, %10
  %12 = trunc i64 %11 to i32
  %13 = call i32 @acpitbl_write64(i8* %8, i32 36, i32 %12)
  %14 = load i8*, i8** %1, align 8
  %15 = load i64, i64* @XHYVE_ACPI_BASE, align 8
  %16 = load i64, i64* @FADT_OFFSET, align 8
  %17 = add nsw i64 %15, %16
  %18 = trunc i64 %17 to i32
  %19 = call i32 @acpitbl_write64(i8* %14, i32 44, i32 %18)
  %20 = load i8*, i8** %1, align 8
  %21 = load i64, i64* @XHYVE_ACPI_BASE, align 8
  %22 = load i64, i64* @HPET_OFFSET, align 8
  %23 = add nsw i64 %21, %22
  %24 = trunc i64 %23 to i32
  %25 = call i32 @acpitbl_write64(i8* %20, i32 52, i32 %24)
  %26 = load i8*, i8** %1, align 8
  %27 = load i64, i64* @XHYVE_ACPI_BASE, align 8
  %28 = load i64, i64* @MCFG_OFFSET, align 8
  %29 = add nsw i64 %27, %28
  %30 = trunc i64 %29 to i32
  %31 = call i32 @acpitbl_write64(i8* %26, i32 60, i32 %30)
  %32 = load i8*, i8** %1, align 8
  %33 = load i8*, i8** %1, align 8
  %34 = call i32 @acpitbl_checksum(i8* %33, i32 68)
  %35 = call i32 @acpitbl_write8(i8* %32, i32 9, i32 %34)
  ret void
}

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @acpitbl_write64(i8*, i32, i32) #1

declare dso_local i32 @acpitbl_write8(i8*, i32, i32) #1

declare dso_local i32 @acpitbl_checksum(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
